k8s/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: redis
  namespace: air-stations

spec:
  serviceName: "redis-service"
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis
  
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
