k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: air-stations

spec: 
  type: ClusterIP
  selector:
    app: air-stations-api 
  
  ports:
    - port: 8000
      targetPort: 8000
